--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,36 +1,27 @@
 ---
-const title = 'Welcome to Astro Lab 1';
+/*const title = 'Welcome to Astro Lab 1';
 const color = 'danger';
 
 const hobbies = ['programar', ' leer', ' escribir', ' estudiar', 'descansar', 'aprender', 'manejar'];
 
-const isActive = false;
+const isActive = false; */
+
+
+import Layout from "../components/Layout.astro"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
+
+<!-- 
 		<h1 class={color}>{title}</h1>
-		<!-- <h2 class="warning">{hobbies[0]}</h2> -->
+		<!-- <h2 class="warning">{hobbies[0]}</h2> 
 		<ul>
 			{hobbies.map((hobby) => <li>
 				<h3>{hobby}</h3><button>Like</button></li>)}
 		</ul>
 
-		<!-- <h3 class="warning">{isActive ? "user is active" : "user is disabled"}</h3> -->
-		<h3 class="warning">{isActive?"user is active" : ""}</h3> <!-- {isActive && "user is active"} tambien puedo decirle {!isActive && "user is disabled"}-->
-	</body>
-</html>
-
-<script>
-	console.log("hi coders");
-</script>
+		<!-- <h3 class="warning">{isActive ? "user is active" : "user is disabled"}</h3> 
+		<h3 class="warning">{isActive?"user is active" : ""}</h3> <!-- {isActive && "user is active"} tambien puedo decirle {!isActive && "user is disabled"}
+	
 
 <style>
 
@@ -47,4 +38,11 @@ const isActive = false;
 	.warning {
 		color: yellow;
 	}
-</style>
+</style> 
+ -->
+
+ 	<Layout pageTitle="Home Page" pageDescription="This is a page to offer software development services">
+		<h1>Home Page</h1>
+		<p>Welcome to my blog</p>
+	</Layout>
+ 
